--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagenio | Transferência de Exames Médicos de Imagem</title>
 
-    <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+    <link rel="icon" type="image/x-icon" href="favicon.svg">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,15 +17,21 @@
 </head>
 <body>
     <div class="container pt-5 pb-5">
-        <div class="card-fold brand-bg">
+        <div class="row">
+            <div class="col">
+                <button class="rounded-btn brand-bg">
+                    
+                </button>
+            </div>
+        </div>
+        <!-- <div class="card-fold brand-bg">
             <div class="card-top-container">
                 <img src="/img/svg/brand-folder-card-connection.svg" class="folder-card-connection" alt="folder-card-connection" width="46px" height="20px">
                 <div class="card-top-bar brand-bg"></div>
             </div>
             <div class="p-4">
-                teste
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
