--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <body>
     <div class="container pt-5 pb-5">
         <div class="row">
-            <div class="col">
-                <button class="rounded-btn brand-bg">
-                    
-                </button>
+            <div class="col-6">
+                <!-- <button class="rounded-btn brand-bg">
+
+                </button> -->
             </div>
         </div>
         <!-- <div class="card-fold brand-bg">
@@ -33,5 +33,15 @@
             </div>
         </div> -->
     </div>
+
+    <style>
+        .custom-input::placeholder {
+            opacity: 1;
+            color: var(--brand-primary) !important;
+            font-size: 14px;
+            line-height: 12px;
+            font-weight: 400;
+        }
+    </style>
 </body>
 </html>
