--- a/index.html
+++ b/index.html
@@ -11,11 +11,67 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Urbanist:wght@700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <div class="row">
+                <nav class="col d-flex align-items-center justify-content-between">
+                    <button class="no-bg-btn p-0">
+                        <img src="/img/svg/logo.svg" alt="Logo Imagenio" class="logo">
+                    </button>
+
+                    <button class="custom-btn rounded-btn bigger-btn-text brand-darker-bg px-5 py-4">
+                        Teste Grátis
+                    </button>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <section class="hero container" id="hero">
+        <div class="row">
+            <div class="col-6">
+                <h1 class="brand-darker-text pb-3" style="max-width: 580px;">
+                    <span class="brand-text">Simplifique a Transferência de</span> 
+                    Exames Médicos de Imagem
+                </h1>
+
+                <h3 class="primary-text smaller pt-2" style="max-width: 490px;">
+                    A solução ideal para otimizar o 
+                    compartilhamento de exames, garantir a 
+                    segurança dos dados e melhorar o fluxo 
+                    operacional. Tudo isso com um sistema seguro 
+                    e simples de usar.
+                </h3>
+
+                <div class="d-flex align-items-center justify-content-start gap-4 pt-4">
+                    <button class="custom-btn rounded-btn btn-text brand-bg px-3">
+                        Planos e Preços
+                    </button>
+
+                    <button 
+                      class="
+                        custom-btn rounded-btn btn-text brand-secondary-bg 
+                        d-flex align-items-center justify-content-center
+                        gap-2 px-3"
+                    >
+                        <img src="/img/svg/play.svg" alt="Ir para" width="16px">
+                        Planos e Preços
+                    </button>
+                </div>
+
+                
+            </div>
+
+            <div class="col-6">
+
+            </div>
+        </div>
+    </section>
     <div class="container pt-5 pb-5">
         <div class="row">
             <div class="col-6">
