--- a/index.html
+++ b/index.html
@@ -276,12 +276,12 @@
         <div class="row pt-5">
             <div class="col d-flex align-items-center justify-content-between">
                 <button class="no-bg-btn pe-0 pe-xxl-3" title="Anterior">
-                    <img src="/img/svg/arrow-back.svg" alt="Anterior" class="d-block">
+                    <img src="img/svg/arrow-back.svg" alt="Anterior" class="d-block">
                 </button>
 
                 <div class="custom-carroussel-container w-100">
                     <div class="carroussel-card light-bg big-square-card">
-                        <img src="/img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
+                        <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
 
                         <h3 class="darker-text smaller fw-600">
                             Simplicidade na Transferência de Exames
@@ -293,7 +293,7 @@
                     </div>
                     
                     <div class="carroussel-card light-bg big-square-card">
-                        <img src="/img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
+                        <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
 
                         <h3 class="darker-text smaller fw-600">
                             Acessibilidade e Armazenamento Seguro
@@ -305,7 +305,7 @@
                     </div>
 
                     <div class="carroussel-card light-bg big-square-card">
-                        <img src="/img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
+                        <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
 
                         <h3 class="darker-text smaller fw-600">
                             Diversos Métodos de Compartilhamento de Exames
@@ -318,7 +318,7 @@
                 </div>
 
                 <button class="no-bg-btn ps-0 ps-xxl-3" title="Próximo">
-                    <img src="/img/svg/arrow-next.svg" alt="Próximo" class="d-block">
+                    <img src="img/svg/arrow-next.svg" alt="Próximo" class="d-block">
                 </button>
             </div>
         </div>
@@ -362,10 +362,154 @@
             </div>
 
             <div class="col-5 d-flex justify-content-end justify-content-xxl-center">
-                <img src="/img/doctor-female.jpg" alt="Imagem consulta doutora" class="w-100 img-doctor-female">
+                <img src="img/doctor-female.jpg" alt="Imagem consulta doutora" class="w-100 img-doctor-female">
             </div>
         </div>
     </section>
+
+    <!-- ===================================================== -->
+
+    <section class="container pt-5" id="faq">
+        <div class="row pt-5">
+            <div class="col pt-4">
+                <h1 class="brand-darker-text text-center w-100 smaller">
+                    Perguntas Frequentes <span class="brand-text">FAQ</span>
+                </h1>
+            </div>
+        </div>
+
+        <div class="row pt-4">
+            <div class="col-4 d-flex flex-column gap-3">
+                <div class="big-square-card faq-card-padding light-bg">
+                    <div class="d-flex align-items-center justify-content-between gap-2 pb-3">
+                        <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
+
+                        <h4 class="darker-text">
+                            Como funciona o teste <br>
+                            grátis?
+                        </h4>
+                    </div>
+
+                    <p class="primary-text ">
+                        Você terá acesso a todas as funcionalidades por 30 dias, sem compromisso.
+                    </p>
+                </div>
+
+                <div class="big-square-card faq-card-padding light-bg">
+                    <div class="d-flex align-items-center justify-content-between gap-2 pb-3">
+                        <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
+
+                        <h4 class="darker-text">
+                            Os exames ficam <br>
+                            seguros na nuvem?
+                        </h4>
+                    </div>
+
+                    <p class="primary-text ">
+                        Totalmente. Seguimos as normas de segurança e privacidade de dados (LGPD).
+                    </p>
+                </div>
+
+                <div class="big-square-card faq-card-padding light-bg">
+                    <div class="d-flex align-items-center justify-content-between gap-2 pb-3">
+                        <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
+
+                        <h4 class="darker-text">
+                            O sistema é compatível <br>
+                            com meu PACS?
+                        </h4>
+                    </div>
+
+                    <p class="primary-text ">
+                        Sim, nossa integração é simples e rápida.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-8">
+                <div class="big-square-card faq-big-card-padding light-bg">
+                    <div class="d-flex align-items-start justify-content-start gap-3 pb-4">
+                        <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
+
+                        <div>
+                            <h4 class="darker-text pb-1">
+                                Como é feita a instalação do sistema?
+                            </h4>
+
+                            <p class="primary-text">
+                                A instalação é simples e rápida, feita diretamente em um computador ou servidor local, com suporte remoto disponível.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="separator opacity-light"></div>
+
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ===================================================== -->
+
+    <footer class="container pt-5">
+        <div class="row pt-5">
+            <nav class="col-12 d-flex align-items-center justify-content-between">
+                <button class="no-bg-btn p-0">
+                    <img src="img/svg/logo.svg" alt="Logo Imagenio" class="logo">
+                </button>
+
+                <ul class="d-flex align-items-center justify-content-end gap-4">
+                    <li>
+                        <a class="brand-darker-text">Políticas de Privacidade</a>
+                    </li>
+                    <li>
+                        <a class="brand-darker-text">Políticas de Uso</a>
+                    </li>
+                    <li>
+                        <a class="brand-darker-text">FAQ</a>
+                    </li>
+                    <li>
+                        <a class="brand-darker-text">Como Funciona</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <div class="col-12 pt-2 pb-4">
+                <div class="separator brand-darker-bg"></div>
+            </div>
+
+            <div class="col-12 d-flex align-items-center justify-content-between pb-5">
+                <p class="brand-darker-text fw-600">
+                    © 2026 copyright Imagenio. Todos os direitos reservados.
+                </p>
+
+                <ul class="d-flex align-items-center justify-content-end gap-2">
+                    <li>
+                        <a href="https://www.instagram.com" target="_blank">
+                            <button class="square-btn social-media-btn custom-btn brand-darker-bg">
+                                <img src="img/svg/instagram.svg" alt="Instagram">
+                            </button>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com" target="_blank">
+                            <button class="square-btn social-media-btn custom-btn brand-darker-bg">
+                                <img src="img/svg/linkedin.svg" alt="linkedin">
+                            </button>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com" target="_blank">
+                            <button class="square-btn social-media-btn custom-btn brand-darker-bg">
+                                <img src="img/svg/youtube.svg" alt="youtube">
+                            </button>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
     <style>
         .custom-input::placeholder {
