finish static desktop

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
         <div class="row pt-4">
             <div class="col-4 d-flex flex-column gap-3">
                 <div class="big-square-card faq-card-padding light-bg">
-                    <div class="d-flex align-items-center justify-content-between gap-2 pb-3">
+                    <div class="d-flex align-items-center justify-content-start gap-2 gap-xxl-4 pb-3">
                         <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
 
                         <h4 class="darker-text">
@@ -396,7 +396,7 @@
                 </div>
 
                 <div class="big-square-card faq-card-padding light-bg">
-                    <div class="d-flex align-items-center justify-content-between gap-2 pb-3">
+                    <div class="d-flex align-items-center justify-content-start gap-2 gap-xxl-4 pb-3">
                         <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
 
                         <h4 class="darker-text">
@@ -411,7 +411,7 @@
                 </div>
 
                 <div class="big-square-card faq-card-padding light-bg">
-                    <div class="d-flex align-items-center justify-content-between gap-2 pb-3">
+                    <div class="d-flex align-items-center justify-content-start gap-2 gap-xxl-4 pb-3">
                         <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
 
                         <h4 class="darker-text">
@@ -422,6 +422,23 @@
 
                     <p class="primary-text ">
                         Sim, nossa integração é simples e rápida.
+                    </p>
+                </div>
+
+                <div class="big-square-card faq-card-padding brand-bg">
+                    <div class="d-flex align-items-center justify-content-start gap-2 gap-xxl-4 pb-3">
+                        <img src="img/svg/white-uprising-arrow.svg" alt="Seta" class="arrow">
+
+                        <div>
+                            <h4 class="light-text m-0">
+                                Ainda tem dúvidas?
+                            </h4>
+                            <p class="light-text m-0" style="line-height: 16px !important;">Explore agora todas as dúvidas mais comuns</p>
+                        </div>
+                    </div>
+
+                    <p class="light-text">
+                        Veja como a nossa plataforma pode otimizar sua operação com nossa solução.
                     </p>
                 </div>
             </div>
@@ -442,9 +459,113 @@
                         </div>
                     </div>
 
-                    <div class="separator opacity-light"></div>
+                    <div class="custom-accordion w-100">
+                        <div class="accordion-header pt-2 pe-2 pb-3">
+                            <h4 class="darker-text pt-3">
+                                Preciso de servidores locais para utilizar a Imagenio?
+                            </h4>
 
+                            <img src="img/svg/accordion-arrow.svg" alt="Selecionar" class="open-close-btn" alt="Abrir/Fechar">
+                        </div>
 
+                        <div class="accordion-content">
+                            <div class="content-hider">
+                                <p class="primary-text pt-3 pb-3">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sunt voluptatem culpa quaerat saepe. Labore eaque illum, doloremque excepturi aliquid.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="custom-accordion w-100">
+                        <div class="accordion-header pt-2 pe-2 pb-3">
+                            <h4 class="darker-text pt-3">
+                                O sistema permite envio automático de exames aos pacientes?
+                            </h4>
+
+                            <img src="img/svg/accordion-arrow.svg" alt="Selecionar" class="open-close-btn" alt="Abrir/Fechar">
+                        </div>
+
+                        <div class="accordion-content">
+                            <div class="content-hider">
+                                <p class="primary-text pt-3 pb-3">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sunt voluptatem culpa quaerat saepe. Labore eaque illum, doloremque excepturi aliquid.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="custom-accordion w-100">
+                        <div class="accordion-header pt-2 pe-2 pb-3">
+                            <h4 class="darker-text pt-3">
+                                Posso acessar os exames de qualquer dispositivo?
+                            </h4>
+
+                            <img src="img/svg/accordion-arrow.svg" alt="Selecionar" class="open-close-btn" alt="Abrir/Fechar">
+                        </div>
+
+                        <div class="accordion-content">
+                            <div class="content-hider">
+                                <p class="primary-text pt-3 pb-3">
+                                    Sim, os exames podem ser visualizados online de qualquer dispositivo com acesso à internet.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="custom-accordion w-100">
+                        <div class="accordion-header pt-2 pe-2 pb-3">
+                            <h4 class="darker-text pt-3">
+                                A Imagenio é compatível com diferentes formatos de exames?
+                            </h4>
+
+                            <img src="img/svg/accordion-arrow.svg" alt="Selecionar" class="open-close-btn" alt="Abrir/Fechar">
+                        </div>
+
+                        <div class="accordion-content">
+                            <div class="content-hider">
+                                <p class="primary-text pt-3 pb-3">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sunt voluptatem culpa quaerat saepe. Labore eaque illum, doloremque excepturi aliquid.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="custom-accordion w-100">
+                        <div class="accordion-header pt-2 pe-2 pb-3">
+                            <h4 class="darker-text pt-3">
+                                A Imagenio está em conformidade com a LGPD e normas de segurança médica?
+                            </h4>
+
+                            <img src="img/svg/accordion-arrow.svg" alt="Selecionar" class="open-close-btn" alt="Abrir/Fechar">
+                        </div>
+
+                        <div class="accordion-content">
+                            <div class="content-hider">
+                                <p class="primary-text pt-3 pb-3">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sunt voluptatem culpa quaerat saepe. Labore eaque illum, doloremque excepturi aliquid.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="custom-accordion w-100">
+                        <div class="accordion-header pt-2 pe-2 pb-3">
+                            <h4 class="darker-text pt-3">
+                                Como funciona o processo de cancelamento após o período de teste?
+                            </h4>
+
+                            <img src="img/svg/accordion-arrow.svg" alt="Selecionar" class="open-close-btn" alt="Abrir/Fechar">
+                        </div>
+
+                        <div class="accordion-content">
+                            <div class="content-hider">
+                                <p class="primary-text pt-3 pb-3">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sunt voluptatem culpa quaerat saepe. Labore eaque illum, doloremque excepturi aliquid.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
