--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <header>
+    <header class="">
         <div class="container">
             <div class="row">
                 <nav class="col d-flex align-items-center justify-content-between">
@@ -459,7 +459,7 @@
                         </div>
                     </div>
 
-                    <div class="custom-accordion w-100">
+                    <div class="custom-accordion">
                         <div class="accordion-header pt-2 pe-2 pb-3">
                             <h4 class="darker-text pt-3">
                                 Preciso de servidores locais para utilizar a Imagenio?
@@ -641,5 +641,7 @@
             font-weight: 400;
         }
     </style>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
