--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
         <div class="row pt-5">
             <div class="col d-flex align-items-center justify-content-between">
-                <button class="no-bg-btn pe-0 pe-xxl-3" title="Anterior">
+                <button data-carroussel-btn-backward class="no-bg-btn pe-0 pe-xxl-3" title="Anterior">
                     <img src="img/svg/arrow-back.svg" alt="Anterior" class="d-block">
                 </button>
 
@@ -315,9 +315,45 @@
                             Compartilhe exames por PDF, e-mail, SMS ou fax — a solução ideal para médicos, pacientes e instituições.
                         </p>
                     </div>
+
+                    <div class="carroussel-card light-bg big-square-card">
+                        <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
+
+                        <h3 class="darker-text smaller fw-600">
+                            Simplicidade na Transferência de Exames
+                        </h3>
+
+                        <p class="secondary-text">
+                            Compartilhe exames com médicos e pacientes direto na nuvem, sem complicações.
+                        </p>
+                    </div>
+                    
+                    <div class="carroussel-card light-bg big-square-card">
+                        <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
+
+                        <h3 class="darker-text smaller fw-600">
+                            Acessibilidade e Armazenamento Seguro
+                        </h3>
+
+                        <p class="secondary-text">
+                            Exames armazenados na nuvem, com criptografia e em conformidade com a LGPD. Acesse de qualquer dispositivo.
+                        </p>
+                    </div>
+
+                    <div class="carroussel-card light-bg big-square-card">
+                        <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
+
+                        <h3 class="darker-text smaller fw-600">
+                            Diversos Métodos de Compartilhamento de Exames
+                        </h3>
+
+                        <p class="secondary-text">
+                            Compartilhe exames por PDF, e-mail, SMS ou fax — a solução ideal para médicos, pacientes e instituições.
+                        </p>
+                    </div>
                 </div>
 
-                <button class="no-bg-btn ps-0 ps-xxl-3" title="Próximo">
+                <button data-carroussel-btn-forward class="no-bg-btn ps-0 ps-xxl-3" title="Próximo">
                     <img src="img/svg/arrow-next.svg" alt="Próximo" class="d-block">
                 </button>
             </div>
