--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
             </div>
         </div>
 
-        <div class="row pt-5">
+        <div class="row">
             <div class="col d-flex align-items-center justify-content-between">
                 <button data-carroussel-btn-backward class="no-bg-btn pe-0 pe-xxl-3" title="Anterior">
                     <img src="img/svg/arrow-back.svg" alt="Anterior" class="d-block">
                 </button>
 
-                <div class="custom-carroussel-container w-100">
+                <div class="py-5 custom-carroussel-container w-100">
                     <div class="carroussel-card light-bg big-square-card">
                         <img src="img/svg/uprising-arrow.svg" alt="Seta" class="arrow">
 
@@ -362,7 +362,7 @@
 
     <!-- ===================================================== -->
 
-    <section class="container pt-5" id="practicity">
+    <section class="container" id="practicity">
         <div class="row pt-5">
             <div class="col pt-2">
                 <h1 class="brand-darker-text smaller" style="max-width: 820px; transform: translateY(25px);">
