why-imagenio responsivity

--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
 
     <!-- ===================================================== -->
 
-    <section class="container pt-5" id="why-imagenio">
-        <div class="row pt-5 pb-5">
-            <div class="col-7">
+    <section class="why-imagenio container pt-0 pt-xl-5" id="why-imagenio">
+        <div class="row pt-3 pt-xl-5 pb-5">
+            <div class="col-7 d-none d-xl-block">
                 <h2 class="primary-text fw-500 text-uppercase pb-2" style="max-width: 597px; min-width: 597px;">
                     mais praticidade 
                     <span class="brand-text fw-700">com uma solução SIMPLES</span>
@@ -273,24 +273,29 @@
                 </h4>
             </div>
 
-            <div class="col-5">
-                <h1 class="brand-darker-text bigger text-end pb-3" style="max-width: 460px; transform: translateY(-12px);">
+            <div class="col-12 col-xl-5">
+                <h1 class="w-100 brand-darker-text bigger text-center text-xl-end pb-3" style="">
                     Por que a <span class="brand-text">Imagenio?</span>
                 </h1>
             </div>
         </div>
         
         <div class="row">
-            <div class="col">
-                <div class="position-relative">
+            <div class="col-12">
+                <div class="mobile-family-container position-relative">
                     <img 
                       src="img/family-doctor.jpg" 
                       alt="Iamgem de família na consulta"
-                      class="w-100 family-doctor-img">
+                      class="w-100 family-doctor-img d-none d-xl-block">
+
+                    <img 
+                      src="img/mobile-family-doctor.jpg" 
+                      alt="Iamgem de família na consulta"
+                      class="w-100 mobile-family-doctor-img d-block d-xl-none">
 
                     <div class="light-bg big-square-card square-card-why-imagenio big-square-padding w-fit-content">
-                        <img src="img/svg/speedometer.svg" alt="Reduza o tempo de espera" class="mb-4">
-                        <h3 class="darker-text">
+                        <img src="img/svg/speedometer.svg" alt="Reduza o tempo de espera" class="mb-3 mb-xl-4">
+                        <h3 class="darker-text text-start p-0 m-0">
                             Reduza o tempo <br>
                             de espera e <br>
                             elimine processos <br>
@@ -298,6 +303,19 @@
                         </h3>
                     </div>
                 </div>
+            </div>
+
+            <div class="col-12 d-block d-xl-none pt-5">
+                <h2 class="w-100 mx-auto primary-text fw-500 text-uppercase text-center pb-2 pt-5" style="max-width: 358px;">
+                    mais praticidade 
+                    <span class="brand-text fw-700">com uma solução SIMPLES</span>
+                    em nuvem
+                </h2>
+
+                <p class="w-100 mx-auto primary-text fw-500 bigger pt-2 text-center" style="max-width: 359px;">
+                    Compartilhamento de exames em diversos formatos: PDF, E-
+                    mail, SMS e Fax, garantindo mais praticidade e eficiência.
+                </p>
             </div>
         </div>
     </section>
